fix x overflow

--- a/src/css/story/story.styl
+++ b/src/css/story/story.styl
@@ -717,7 +717,6 @@ select::selection{
   font-weight: 800;
   font-size: 12;
   border-bottom: 1px solid $off-black;
-  padding: 0rem 1rem 1rem 1rem;
   height: 150px;
 }
 
